--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "axios": "^1.6.7",
     "next": "14.1.3",
     "react": "^18",
+    "react-compare-slider": "^3.0.1",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
